refactor: javafx:run fungerer
lagt til javafx:run plugin og får programmet til å kjøre i fxui